--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <nav class="navbar">
     <h2 class="logo">MADHAN RAJ</h2>
     <ul class="nav-links">
-      <li><a href="home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="projects.html">Projects</a></li>
       <li><a href="contact.html" class="active">Contact</a></li>
