Final Version of Portfolio

--- a/My_Portfolio/pages/about.html
+++ b/My_Portfolio/pages/about.html
@@ -4,21 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>About | Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
+
+  <div class="wrapper">
   <nav class="navbar">
     <h2 class="logo">MADHAN RAJ</h2>
     <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html" class="active">About</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="../pages/index.html">Home</a></li>
+      <li><a href="../pages/about.html" class="active">About</a></li>
+      <li><a href="../pages/projects.html">Projects</a></li>
+      <li><a href="../pages/contact.html">Contact</a></li>
     </ul>
   </nav>
 
   <section>
-    <h2 class="heading">ABOUT ME</h2>
+    <h2 class="heading"><span>ABOUT ME</span></h2>
 
     <div class="details">
       <div class="info">
@@ -41,11 +43,14 @@
         <p><b>1. </b>I have completed <b>The Complete Web Development Bootcamp</b> on Udemy, which gave me a strong foundation in full-stack development.</p> 
         <p><b>2. </b>Currently, I'm working through the <b>100 Days of Code: The Complete Python Pro Bootcamp</b>, also on Udemy, to strengthen my Python skills.</p>
       </div>
+      
     </div>
   </section>
 
   <footer>
     <p>Copyright © 2025 Madhan Raj D | All Rights Reserved.</p>
   </footer>
+
+  </div>
 </body>
 </html>
