--- a/My_Portfolio/pages/index.html
+++ b/My_Portfolio/pages/index.html
@@ -4,32 +4,36 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Home | Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
+
+  <div class="wrapper">
   <nav class="navbar">
     <h2 class="logo">MADHAN RAJ</h2>
     <ul class="nav-links">
-      <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="../pages/index.html" class="active">Home</a></li>
+      <li><a href="../pages/about.html">About</a></li>
+      <li><a href="../pages/projects.html">Projects</a></li>
+      <li><a href="../pages/contact.html">Contact</a></li>
     </ul>
   </nav>
 
   <section class="main-section">
-    <img src="profile.jpg" alt="profile" width="150px" height="150px" class="profile">
+    <img src="../src/profile.jpg" alt="profile" width="150px" height="150px" class="profile">
 
     <h1>Hi, I am Madhan Raj!</h1>
     <p>Welcome to my portfolio website. I am a passionate developer, designer, and creator.</p>
 
     <div class="pdf-buttons">
-    <a href="Madhan Raj Resume.pdf" download>Download Resume <img src="download.png" alt="Download Icon" class="download-icon"></a> 
+    <a href="../src/Madhan Raj Resume.pdf" download>DOWNLOAD RESUME <img src="../src/download.png" alt="Download Icon" class="download-icon"></a> 
     </div>
   </section>
 
   <footer>
     <p>Copyright © 2025 Madhan Raj D | All Rights Reserved.</p>
   </footer>
+
+  </div>
 </body>
 </html>
