--- a/My_Portfolio/pages/contact.html
+++ b/My_Portfolio/pages/contact.html
@@ -4,22 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact | Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
+
+  <div class="wrapper">
   <nav class="navbar">
     <h2 class="logo">MADHAN RAJ</h2>
     <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="contact.html" class="active">Contact</a></li>
+      <li><a href="../pages/index.html">Home</a></li>
+      <li><a href="../pages/about.html">About</a></li>
+      <li><a href="../pages/projects.html">Projects</a></li>
+      <li><a href="../pages/contact.html" class="active">Contact</a></li>
     </ul>
   </nav>
-
-      <h2 class="heading">CONTACT ME</h2>
       
       <section class="contact-section">
+      <h2 class="heading"><span>CONTACT ME</span></h2>
       <div class="form-container">
       <form class="contact-me">
         <input type="text" placeholder="Your Name" required>
@@ -34,5 +35,7 @@
   <footer>
     <p>Copyright © 2025 Madhan Raj D | All Rights Reserved.</p>
   </footer>
+
+  </div>
 </body>
 </html>
