--- a/My_Portfolio/pages/projects.html
+++ b/My_Portfolio/pages/projects.html
@@ -4,21 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Projects | Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
+
+  <div class="wrapper">
   <nav class="navbar">
     <h2 class="logo">MADHAN RAJ</h2>
     <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="projects.html" class="active">Projects</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="../pages/index.html">Home</a></li>
+      <li><a href="../pages/about.html">About</a></li>
+      <li><a href="../pages/projects.html" class="active">Projects</a></li>
+      <li><a href="../pages/contact.html">Contact</a></li>
     </ul>
   </nav>
 
   <section>
-    <h2 class="heading">PROJECTS</h2>
+    <h2 class="heading"><span>PROJECTS</span></h2>
 
     <div class="details">
       <div class="info">
@@ -56,5 +58,7 @@
   <footer>
     <p>Copyright © 2025 Madhan Raj D | All Rights Reserved.</p>
   </footer>
+
+  </div>
 </body>
 </html>
