Favicon Added to the Pages

--- a/My_Portfolio/index.html
+++ b/My_Portfolio/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Home | Portfolio</title>
   <link rel="stylesheet" href="../css/style.css" />
+  <link rel="icon" href="/src/icon.png" type="image/x-icon">
 </head>
 <body>
 
@@ -12,7 +13,7 @@
   <nav class="navbar">
     <h2 class="logo">MADHAN RAJ</h2>
     <ul class="nav-links">
-      <li><a href="../pages/index.html" class="active">Home</a></li>
+      <li><a href="index.html" class="active">Home</a></li>
       <li><a href="../pages/about.html">About</a></li>
       <li><a href="../pages/projects.html">Projects</a></li>
       <li><a href="../pages/contact.html">Contact</a></li>
