--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,38 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact | Portfolio</title>
   <link rel="stylesheet" href="../css/style.css" />
-  <link rel="icon" href="/src/icon.png" type="image/x-icon">
+  <link rel="icon" href="../src/icon.png" type="image/x-icon">
 </head>
 <body>
 
   <div class="wrapper">
-  <nav class="navbar">
-    <h2 class="logo">MADHAN RAJ</h2>
-    <ul class="nav-links">
-      <li><a href="../index.html">Home</a></li>
-      <li><a href="../pages/about.html">About</a></li>
-      <li><a href="../pages/projects.html">Projects</a></li>
-      <li><a href="../pages/contact.html" class="active">Contact</a></li>
-    </ul>
-  </nav>
+    <nav class="navbar">
+      <h2 class="logo">MADHAN RAJ</h2>
+      <ul class="nav-links">
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="contact.html" class="active">Contact</a></li>
+      </ul>
+    </nav>
       
-      <section class="contact-section">
+    <section class="contact-section">
       <h2 class="heading"><span>CONTACT ME</span></h2>
       <div class="form-container">
-      <form class="contact-me">
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <input type="tel" placeholder="Your Phone Number" required>
-        <textarea name="message" placeholder="Your Message" required></textarea>
-        <button type="submit">SEND</button>
-      </form>
+        <form class="contact-me">
+          <input type="text" placeholder="Your Name" required>
+          <input type="email" placeholder="Your Email" required>
+          <input type="tel" placeholder="Your Phone Number" required>
+          <textarea name="message" placeholder="Your Message" required></textarea>
+          <button type="submit">SEND</button>
+        </form>
       </div>
-     </section>
+    </section>
 
-  <footer>
-    <p>Copyright © 2025 Madhan Raj D | All Rights Reserved.</p>
-  </footer>
-
+    <footer>
+      <p>Copyright © 2025 Madhan Raj D | All Rights Reserved.</p>
+    </footer>
   </div>
+
 </body>
 </html>
