--- a/index.html
+++ b/index.html
@@ -4,37 +4,42 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Home | Portfolio</title>
-  <link rel="stylesheet" href="../css/style.css" />
-  <link rel="icon" href="/src/icon.png" type="image/x-icon">
+  <!-- Path changed: css/style.css instead of ../css/style.css -->
+  <link rel="stylesheet" href="css/style.css" />
+  <!-- Favicon path fixed: relative to root -->
+  <link rel="icon" href="src/icon.png" type="image/x-icon">
 </head>
 <body>
 
   <div class="wrapper">
-  <nav class="navbar">
-    <h2 class="logo">MADHAN RAJ</h2>
-    <ul class="nav-links">
-      <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="../pages/about.html">About</a></li>
-      <li><a href="../pages/projects.html">Projects</a></li>
-      <li><a href="../pages/contact.html">Contact</a></li>
-    </ul>
-  </nav>
+    <nav class="navbar">
+      <h2 class="logo">MADHAN RAJ</h2>
+      <ul class="nav-links">
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="pages/about.html">About</a></li>
+        <li><a href="pages/projects.html">Projects</a></li>
+        <li><a href="pages/contact.html">Contact</a></li>
+      </ul>
+    </nav>
 
-  <section class="main-section">
-    <img src="../src/profile.jpg" alt="profile" width="150px" height="150px" class="profile">
+    <section class="main-section">
+      <!-- Path changed: src/profile.jpg (no ../ needed) -->
+      <img src="src/profile.jpg" alt="profile" width="150px" height="150px" class="profile">
 
-    <h1>Hi, I am Madhan Raj!</h1>
-    <p>Welcome to my portfolio website. I am a passionate developer, designer, and creator.</p>
+      <h1>Hi, I am Madhan Raj!</h1>
+      <p>Welcome to my portfolio website. I am a passionate developer, designer, and creator.</p>
 
-    <div class="pdf-buttons">
-    <a href="../src/Madhan Raj Resume.pdf" download>DOWNLOAD RESUME <img src="../src/download.png" alt="Download Icon" class="download-icon"></a> 
-    </div>
-  </section>
+      <div class="pdf-buttons">
+        <a href="src/Madhan Raj Resume.pdf" download>
+          DOWNLOAD RESUME <img src="src/download.png" alt="Download Icon" class="download-icon">
+        </a> 
+      </div>
+    </section>
 
-  <footer>
-    <p>Copyright © 2025 Madhan Raj D | All Rights Reserved.</p>
-  </footer>
-
+    <footer>
+      <p>Copyright © 2025 Madhan Raj D | All Rights Reserved.</p>
+    </footer>
   </div>
+
 </body>
 </html>
