--- a/pages/about.html
+++ b/pages/about.html
@@ -4,54 +4,55 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>About | Portfolio</title>
+  <!--  Correct relative path for stylesheet -->
   <link rel="stylesheet" href="../css/style.css" />
-  <link rel="icon" href="/src/icon.png" type="image/x-icon">
+  <!--  Correct relative path for favicon -->
+  <link rel="icon" href="../src/icon.png" type="image/x-icon">
 </head>
 <body>
 
   <div class="wrapper">
-  <nav class="navbar">
-    <h2 class="logo">MADHAN RAJ</h2>
-    <ul class="nav-links">
-      <li><a href="../index.html">Home</a></li>
-      <li><a href="../pages/about.html" class="active">About</a></li>
-      <li><a href="../pages/projects.html">Projects</a></li>
-      <li><a href="../pages/contact.html">Contact</a></li>
-    </ul>
-  </nav>
+    <nav class="navbar">
+      <h2 class="logo">MADHAN RAJ</h2>
+      <ul class="nav-links">
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="about.html" class="active">About</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
 
-  <section>
-    <h2 class="heading"><span>ABOUT ME</span></h2>
+    <section>
+      <h2 class="heading"><span>ABOUT ME</span></h2>
 
-    <div class="details">
-      <div class="info">
-        <h3>MY JOURNEY</h3>
-        <p>I started my journey in web development during my college years at Velammal Engineering College, where I developed a keen interest in building interactive and dynamic websites. From simple HTML pages to full-stack web applications, my learning process has been hands-on and project-driven. I constantly strive to explore the latest technologies and enhance my problem-solving skills.</p>
+      <div class="details">
+        <div class="info">
+          <h3>MY JOURNEY</h3>
+          <p>I started my journey in web development during my college years at Velammal Engineering College, where I developed a keen interest in building interactive and dynamic websites. From simple HTML pages to full-stack web applications, my learning process has been hands-on and project-driven. I constantly strive to explore the latest technologies and enhance my problem-solving skills.</p>
+        </div>
+
+        <div class="info">
+          <h3>MY SKILLS</h3>
+          <p>Over the years, I have gained expertise in various front-end and back-end technologies. Here are some of the key skills I have acquired:</p>
+          <ul class="skills">
+            <li><strong>Frontend:</strong> HTML, CSS, JavaScript</li>
+            <li><strong>Backend:</strong> Node.js, Express.js, Python</li>
+            <li><strong>Database:</strong> SQL</li>
+          </ul>
+        </div>
+
+        <div class="info">
+          <h3>CERTIFICATIONS</h3>
+          <p><b>1. </b>I have completed <b>The Complete Web Development Bootcamp</b> on Udemy, which gave me a strong foundation in full-stack development.</p> 
+          <p><b>2. </b>Currently, I'm working through the <b>100 Days of Code: The Complete Python Pro Bootcamp</b>, also on Udemy, to strengthen my Python skills.</p>
+        </div>
       </div>
+    </section>
 
-      <div class="info">
-        <h3>MY SKILLS</h3>
-        <p>Over the years, I have gained expertise in various front-end and back-end technologies. Here are some of the key skills I have acquired:</p>
-        <ul class="skills">
-          <li><strong>Frontend:</strong> HTML, CSS, JavaScript</li>
-          <li><strong>Backend:</strong> Node.js, Express.js, Python</li>
-          <li><strong>Database:</strong> SQL</li>
-        </ul>
-      </div>
-
-      <div class="info">
-        <h3>CERTIFICATIONS</h3>
-        <p><b>1. </b>I have completed <b>The Complete Web Development Bootcamp</b> on Udemy, which gave me a strong foundation in full-stack development.</p> 
-        <p><b>2. </b>Currently, I'm working through the <b>100 Days of Code: The Complete Python Pro Bootcamp</b>, also on Udemy, to strengthen my Python skills.</p>
-      </div>
-      
-    </div>
-  </section>
-
-  <footer>
-    <p>Copyright © 2025 Madhan Raj D | All Rights Reserved.</p>
-  </footer>
-
+    <footer>
+      <p>Copyright © 2025 Madhan Raj D | All Rights Reserved.</p>
+    </footer>
   </div>
+
 </body>
 </html>
