modified about section

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>About | Portfolio</title>
-  <!--  Correct relative path for stylesheet -->
   <link rel="stylesheet" href="../css/style.css" />
-  <!--  Correct relative path for favicon -->
   <link rel="icon" href="../src/icon.png" type="image/x-icon">
 </head>
 <body>
@@ -36,15 +34,15 @@
           <p>Over the years, I have gained expertise in various front-end and back-end technologies. Here are some of the key skills I have acquired:</p>
           <ul class="skills">
             <li><strong>Frontend:</strong> HTML, CSS, JavaScript</li>
-            <li><strong>Backend:</strong> Node.js, Express.js, Python</li>
-            <li><strong>Database:</strong> SQL</li>
+            <li><strong>Backend:</strong> Node.js, Express.js, Java</li>
+            <li><strong>Database:</strong> SQL (PostgreSQL)</li>
           </ul>
         </div>
 
         <div class="info">
           <h3>CERTIFICATIONS</h3>
           <p><b>1. </b>I have completed <b>The Complete Web Development Bootcamp</b> on Udemy, which gave me a strong foundation in full-stack development.</p> 
-          <p><b>2. </b>Currently, I'm working through the <b>100 Days of Code: The Complete Python Pro Bootcamp</b>, also on Udemy, to strengthen my Python skills.</p>
+          <p><b>2. </b>Currently, I'm working through the <b>Java Programming</b>, also on Udemy, to strengthen my Java skills.</p>
         </div>
       </div>
     </section>
