About and Project pages modified

--- a/pages/about.html
+++ b/pages/about.html
@@ -34,15 +34,17 @@
           <p>Over the years, I have gained expertise in various front-end and back-end technologies. Here are some of the key skills I have acquired:</p>
           <ul class="skills">
             <li><strong>Frontend:</strong> HTML, CSS, JavaScript</li>
-            <li><strong>Backend:</strong> Node.js, Express.js, Java</li>
+            <li><strong>Backend:</strong> Node.js, Express.js</li>
             <li><strong>Database:</strong> SQL (PostgreSQL)</li>
+            <li><strong>Programming Language:</strong> Java</li> 
+            <li><strong>Version Control:</strong> Git & GitHub</li> 
           </ul>
         </div>
 
         <div class="info">
           <h3>CERTIFICATIONS</h3>
           <p><b>1. </b>I have completed <b>The Complete Web Development Bootcamp</b> on Udemy, which gave me a strong foundation in full-stack development.</p> 
-          <p><b>2. </b>Currently, I'm working through the <b>Java Programming</b>, also on Udemy, to strengthen my Java skills.</p>
+          <p><b>2. </b>Currently, I'm working through the <b>Java Data Structures & Algorithms</b>, also on Udemy, to strengthen my problem-solving skills.</p>
         </div>
       </div>
     </section>
